[package]
name = "pk_forensic_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.8"
maud = { version = "0.26.0", features = ["axum"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["fs"] }
